- Window/Level sliders are now expressed as Min/Max for easier manipulation
- Fixed a bug that was wasting disk space by saving non persistent items on disk
- Restore split presets, ROI file loading, RGB(A) image support
- Undo/Redo support in paint segmentation
- Allow coloring of vector field by a single color for field comparisons
- Various bugs and crashes corrections

medInria v2.2.1:
- Presets for images are back
- Reversed Loni Lut added
- Diffusion workspace bug correction
- File association on Mac corrected
- Crashing bug in ITK basic filters solved
- Various bugs corrections

medInria v2.2.0:
- Rubber band zoom
- Add support for VTK vtp file format
- New application design 
- DICOM import robustness improved
- Morphological filters (dilate, erode, open, close) added
- ITK 4.6 and VTK5.10 migration
- Vector field visualization
- HighDPI support on OSX
- New navigator to explore patients/studies/series
- New view container management system
- MPR feature added to visualize an image in all orientations 
- Diffusion workspace refactored
- View and Data Management API updated
- View properties toolbox improved and a new system to link properties set up
- Corrections in time line management
- 2 new registration plugins are added : LCC log-Demons and non linear block-matching registration
- Many bug corrections

medInria v2.1.2:
- Bug fixes on view/layer synchronisation in the registration workspace
- Made image annotations more legible on any background by adding text shadows
- Fixed a crash in medPluginGenerator as well as tests
- DICOM import fixes
- Added keyboard shortcuts for orientation buttons
- Simplified paint segmentation toolbox
- File browser settings are now saved
- Mesh thumbnails are now properly rendered on Mac, no more popups on other platforms

medInria v2.1.1:
- Win64 package was using Qt 4.7 instead of 4.8
- Unix packages were using a dynamic boost, instead of static